--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "AoC25"
+name = "aoc25"
 version = "0.1.0"
 edition = "2024"
-default-run = "AoC25"
+default-run = "aoc25"
 
 [dependencies]
